invisible div corrected

--- a/game-screen.css
+++ b/game-screen.css
@@ -26,7 +26,7 @@
     bottom:0;
     right:0;
     width:100%;
-    height:360px;
+    height:160px;
     }
 }
 
